--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pydantic = "^1.10.2"
 coloredlogs = "^15.0.1"
 ipython = "^8.5.0"
 ipykernel = "^6.15.3"
+matplotlib = "^3.6.0"
 
 [tool.poetry.dev-dependencies]
 
