--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ coloredlogs = "^15.0.1"
 ipython = "^8.5.0"
 ipykernel = "^6.15.3"
 matplotlib = "^3.6.0"
+pandas = "^1.4.4"
 
 [tool.poetry.dev-dependencies]
 
