--- a/ui/package.json
+++ b/ui/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@codemirror/lang-python": "^6.0.1",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/material": "^5.10.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -13,6 +17,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "@uiw/codemirror-extensions-events": "^4.12.2",
+    "@uiw/codemirror-theme-github": "^4.12.3",
     "@uiw/react-codemirror": "^4.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
